objects/AcctSeedERP__Purchase_Order__c/fields/Factory_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Factory_Payment_Terms__c</fullName>
    <label>Factory Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30% Advance &amp; 70% before Telex</fullName>
            </value>
            <value>
                <fullName>30 Days Credit from BL Date</fullName>
            </value>
            <value>
                <fullName>60 Days Credit from BL Date</fullName>
            </value>
            <value>
                <fullName>90 Days Credit from BL Date</fullName>
            </value>
            <value>
                <fullName>30 Days Credit</fullName>
                <isActive>false</isActive>
                <label>30 Days Credit</label>
            </value>
            <value>
                <fullName>30+70%</fullName>
                <isActive>false</isActive>
                <label>30+70%</label>
            </value>
            <value>
                <fullName>60 Days Credit</fullName>
                <isActive>false</isActive>
                <label>60 Days Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>