objects/AcctSeedERP__Purchase_Order__c/fields/Factory_Re_submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Factory_Re_submission_Date__c</fullName>
    <label>Factory Re-submission Date</label>
    <type>Date</type>
</CustomField>