objects/AcctSeedERP__Purchase_Order__c/fields/FET_Check_and_Confirm__c.field-meta.xml
<CustomField>
    <fullName>FET_Check_and_Confirm__c</fullName>
    <label>FET Check and Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Not Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>