objects/AcctSeedERP__Purchase_Order__c/fields/Final_Bill_Received_from_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Final_Bill_Received_from_Vendor__c</fullName>
    <label>Final Bill Received from Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>