objects/AcctSeedERP__Purchase_Order__c/fields/Final_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_Address__c</fullName>
    <label>Final Delivery Address</label>
    <type>TextArea</type>
</CustomField>