objects/AcctSeedERP__Purchase_Order__c/fields/Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Final_Destination__c</fullName>
    <label>Final Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>