objects/AcctSeedERP__Purchase_Order__c/fields/Final_Receiver_Details__c.field-meta.xml
<CustomField>
    <fullName>Final_Receiver_Details__c</fullName>
    <label>Final Receiver Details</label>
    <type>TextArea</type>
</CustomField>