objects/AcctSeedERP__Purchase_Order__c/fields/Forwarder__c.field-meta.xml
<CustomField>
    <fullName>Forwarder__c</fullName>
    <label>Forwarder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maestro Forwarder</fullName>
            </value>
            <value>
                <fullName>Factory Forwarder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>