objects/AcctSeedERP__Purchase_Order__c/fields/Forwarder_Name__c.field-meta.xml
<CustomField>
    <fullName>Forwarder_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forwarder Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Forwarder Name)</relationshipLabel>
    <relationshipName>Purchase_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>