objects/AcctSeedERP__Purchase_Order__c/fields/Freight_Amount__c.field-meta.xml
<CustomField>
    <fullName>Freight_Amount__c</fullName>
    <label>Freight Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>