objects/AcctSeedERP__Purchase_Order__c/fields/Freight_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Type__c</fullName>
    <label>Freight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upto Port Delivery</fullName>
            </value>
            <value>
                <fullName>Upto Door Delivery</fullName>
            </value>
            <value>
                <fullName>Standalone Ocean Freight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>