objects/AcctSeedERP__Purchase_Order__c/fields/ISF_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>ISF_Filing_Status__c</fullName>
    <label>ISF Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filed</fullName>
            </value>
            <value>
                <fullName>Not-Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>