objects/AcctSeedERP__Purchase_Order__c/fields/Local_Trucking__c.field-meta.xml
<CustomField>
    <fullName>Local_Trucking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Trucking</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Local Trucking)</relationshipLabel>
    <relationshipName>Purchase_Orders5</relationshipName>
    <type>Lookup</type>
</CustomField>