objects/AcctSeedERP__Purchase_Order__c/fields/Modification_of_Vendor_Order__c.field-meta.xml
<CustomField>
    <fullName>Modification_of_Vendor_Order__c</fullName>
    <label>Modification of Vendor Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modify Quantity</fullName>
            </value>
            <value>
                <fullName>Modify Delivery Time</fullName>
            </value>
            <value>
                <fullName>Cancel the Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>