objects/AcctSeedERP__Purchase_Order__c/fields/No_of_days_if_Drop_Pick_Max_5_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_if_Drop_Pick_Max_5_days__c</fullName>
    <label>No. of days(if Drop &amp; Pick) Max 5 days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>