objects/AcctSeedERP__Purchase_Order__c/fields/Opportunity_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Instruction__c</fullName>
    <label>Opportunity Instruction</label>
    <type>TextArea</type>
</CustomField>