objects/AcctSeedERP__Purchase_Order__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>