objects/AcctSeedERP__Purchase_Order__c/fields/Other_Vendor_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Vendor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Vendor 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Other Vendor 1)</relationshipLabel>
    <relationshipName>Purchase_Orders6</relationshipName>
    <type>Lookup</type>
</CustomField>