objects/AcctSeedERP__Purchase_Order__c/fields/Other_Vendor_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Vendor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Vendor 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Other Vendor 2)</relationshipLabel>
    <relationshipName>Purchase_Orders7</relationshipName>
    <type>Lookup</type>
</CustomField>