objects/AcctSeedERP__Purchase_Order__c/fields/Packing_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Packing_List_Number__c</fullName>
    <label>Packing List Number</label>
    <type>TextArea</type>
</CustomField>