objects/AcctSeedERP__Purchase_Order__c/fields/Payment_Done_to_Factory__c.field-meta.xml
<CustomField>
    <fullName>Payment_Done_to_Factory__c</fullName>
    <label>Payment Done to Factory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Payment</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>