objects/AcctSeedERP__Purchase_Order__c/fields/Payment_Released_to_CHA__c.field-meta.xml
<CustomField>
    <fullName>Payment_Released_to_CHA__c</fullName>
    <label>Payment Released to CHA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>