objects/AcctSeedERP__Purchase_Order__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Advance</fullName>
            </value>
            <value>
                <fullName>30 + 70</fullName>
            </value>
            <value>
                <fullName>50 + 50</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>