objects/AcctSeedERP__Purchase_Order__c/fields/Per_Unit_Freight__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Freight__c</fullName>
    <formula>Total_Ocean_Freight__c  /  Total_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Unit Freight</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>