objects/AcctSeedERP__Purchase_Order__c/fields/Per_Unit_Port_Charges__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Port_Charges__c</fullName>
    <formula>Total_Port_Charges_without_custom_duty__c  /  Total_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Unit Port Charges</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>