objects/AcctSeedERP__Purchase_Order__c/fields/PL_sent__c.field-meta.xml
<CustomField>
    <fullName>PL_sent__c</fullName>
    <label>PL sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>