objects/AcctSeedERP__Purchase_Order__c/fields/POD_Attachment__c.field-meta.xml
<CustomField>
    <fullName>POD_Attachment__c</fullName>
    <label>POD Attachment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Variation</fullName>
            </value>
            <value>
                <fullName>Without Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>