objects/AcctSeedERP__Purchase_Order__c/fields/Port_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_Loading__c</fullName>
    <label>Port Loading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qingdao</fullName>
            </value>
            <value>
                <fullName>Laem Chabang</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>