objects/AcctSeedERP__Purchase_Order__c/fields/Pre_Pull_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pull_Date__c</fullName>
    <label>Pre-Pull Date</label>
    <type>Date</type>
</CustomField>