objects/AcctSeedERP__Purchase_Order__c/fields/Prefered_Date__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Date__c</fullName>
    <label>Prefered Date</label>
    <type>Date</type>
</CustomField>