objects/AcctSeedERP__Purchase_Order__c/fields/Prefered_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Time_Slot__c</fullName>
    <label>Prefered Time Slot</label>
    <type>Time</type>
</CustomField>