objects/AcctSeedERP__Purchase_Order__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_Name__c</field>
            <operation>equals</operation>
            <valueField>Contact.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders (Primary Contact)</relationshipLabel>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>