objects/AcctSeedERP__Purchase_Order__c/fields/Proforma_Invoice_Action__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Action__c</fullName>
    <label>Proforma Invoice Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>