objects/AcctSeedERP__Purchase_Order__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>