objects/AcctSeedERP__Purchase_Order__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Name</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Purchase Orders (Quote Name)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>