objects/AcctSeedERP__Purchase_Order__c/fields/Reason_for_Modification__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Modification__c</fullName>
    <label>Reason for Modification</label>
    <type>TextArea</type>
</CustomField>