objects/AcctSeedERP__Purchase_Order__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>