objects/AcctSeedERP__Purchase_Order__c/fields/Sent_to_Local_Vendor_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Local_Vendor_Date__c</fullName>
    <label>Sent to Local Vendor Date</label>
    <type>Date</type>
</CustomField>