objects/AcctSeedERP__Purchase_Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders (Shipping Address)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>