objects/AcctSeedERP__Purchase_Order__c/fields/Shipping_Address_with_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_with_Zip_Code__c</fullName>
    <label>Shipping Address with Zip Code</label>
    <type>TextArea</type>
</CustomField>