objects/AcctSeedERP__Purchase_Order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Creation</fullName>
            </value>
            <value>
                <fullName>Order Processed and Modulation</fullName>
            </value>
            <value>
                <fullName>PI Received and Confirmation</fullName>
            </value>
            <value>
                <fullName>BL and Documentation</fullName>
            </value>
            <value>
                <fullName>CHA Intervention and Payments</fullName>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
            </value>
            <value>
                <fullName>Delivery to Customer</fullName>
            </value>
            <value>
                <fullName>PO Raised</fullName>
            </value>
            <value>
                <fullName>Delivery Completed</fullName>
            </value>
            <value>
                <fullName>Closed(Delivered / Cancelled)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>