objects/AcctSeedERP__Purchase_Order__c/fields/Summary_of_Bill_of_Entry_Received__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Bill_of_Entry_Received__c</fullName>
    <label>Summary of Bill of Entry Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>