objects/AcctSeedERP__Purchase_Order__c/fields/Supervisor_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Contact_Number__c</fullName>
    <label>Supervisor Contact Number</label>
    <type>Phone</type>
</CustomField>