objects/AcctSeedERP__Purchase_Order__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <label>Supervisor Name</label>
    <type>TextArea</type>
</CustomField>