objects/AcctSeedERP__Purchase_Order__c/fields/Tansporter_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Tansporter_Contact_Name__c</fullName>
    <label>Tansporter Contact Name</label>
    <type>TextArea</type>
</CustomField>