objects/AcctSeedERP__Purchase_Order__c/fields/Tansporter_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Tansporter_Contact_Number__c</fullName>
    <label>Tansporter Contact Number</label>
    <type>Phone</type>
</CustomField>