objects/AcctSeedERP__Purchase_Order__c/fields/Tansporter_Email__c.field-meta.xml
<CustomField>
    <fullName>Tansporter_Email__c</fullName>
    <label>Tansporter Email</label>
    <type>Email</type>
</CustomField>