objects/AcctSeedERP__Purchase_Order__c/fields/Telex_Copy_to_be_attached__c.field-meta.xml
<CustomField>
    <fullName>Telex_Copy_to_be_attached__c</fullName>
    <label>Telex Copy to be attached</label>
    <type>TextArea</type>
</CustomField>