objects/AcctSeedERP__Purchase_Order__c/fields/Tentative_date_of_shipment__c.field-meta.xml
<CustomField>
    <fullName>Tentative_date_of_shipment__c</fullName>
    <label>Tentative date of shipment</label>
    <type>Date</type>
</CustomField>