objects/AcctSeedERP__Purchase_Order__c/fields/Total_Custom_Duty__c.field-meta.xml
<CustomField>
    <fullName>Total_Custom_Duty__c</fullName>
    <label>Total Custom Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>