objects/AcctSeedERP__Purchase_Order__c/fields/Total_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Value__c</fullName>
    <description>Contains the value of total Po value and Total FET value. Used in Domestic PO value record type</description>
    <formula>Total_PO_Value__c  +  Total_FET_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>