objects/AcctSeedERP__Purchase_Order__c/fields/Total_Ocean_Freight__c.field-meta.xml
<CustomField>
    <fullName>Total_Ocean_Freight__c</fullName>
    <label>Total Ocean Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>