objects/AcctSeedERP__Purchase_Order__c/fields/Total_PO_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Value__c</fullName>
    <label>Total PO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>