objects/AcctSeedERP__Purchase_Order__c/fields/Total_Port_Charges_without_custom_duty__c.field-meta.xml
<CustomField>
    <fullName>Total_Port_Charges_without_custom_duty__c</fullName>
    <label>Total Port Charges (without custom duty)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>