objects/AcctSeedERP__Purchase_Order__c/fields/Total_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price__c</fullName>
    <description>Total Product Purchase price including FET.</description>
    <label>Total Purchase Price</label>
    <summarizedField>AcctSeedERP__Purchase_Order_Line__c.Total_Purchase_Price_1__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>