objects/AcctSeedERP__Purchase_Order__c/fields/Transport_Information_for_local_delivery__c.field-meta.xml
<CustomField>
    <fullName>Transport_Information_for_local_delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport Information for local delivery</label>
    <type>Checkbox</type>
</CustomField>