objects/AcctSeedERP__Purchase_Order__c/fields/Transporter_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Contact_Name__c</fullName>
    <label>Transporter Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>