objects/AcctSeedERP__Purchase_Order__c/fields/Transporter_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Contact_Number__c</fullName>
    <label>Transporter Contact Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>