objects/AcctSeedERP__Purchase_Order__c/fields/Transporter_Email__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Email__c</fullName>
    <label>Transporter Email</label>
    <type>Email</type>
</CustomField>