objects/AcctSeedERP__Purchase_Order__c/fields/Unloading_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Unloading_Instructions__c</fullName>
    <label>Unloading Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Unload</fullName>
            </value>
            <value>
                <fullName>Drop &amp; Pick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>