objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_Confirmation_in_case_of_Cancellat__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Confirmation_in_case_of_Cancellat__c</fullName>
    <label>Vendor Confirmation in case of Cancellat</label>
    <type>TextArea</type>
</CustomField>