objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_Custom_Clearing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Custom_Clearing_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor-Custom Clearing Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Vendor-Custom Clearing Agent)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>