objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_Freight__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Freight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor-Freight</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Vendor-Freight)</relationshipLabel>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>